--- a/ecommerce-product-service-api/src/main/resources/bootstrap.yml
+++ b/ecommerce-product-service-api/src/main/resources/bootstrap.yml
@@ -1,4 +1,4 @@
-spring.application.name: product-backend
+spring.application.name: ecommerce-product-service-api
 spring.zipkin.baseUrl: http://localhost:9411
 spring.zipkin.sender.type: web
 spring.sleuth.sampler.probability: 1.0
